# op_rand

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: config.rs  context.rs  esplora.rs  main.rs  ui.rs  util.rs
apps/cli/src/actions/: mod.rs
apps/cli/src/actions/accept_challenge/: mod.rs
apps/cli/src/actions/balance/: mod.rs
apps/cli/src/actions/challenge_info/: mod.rs
apps/cli/src/actions/complete_challenge/: mod.rs
apps/cli/src/actions/create_challenge/: mod.rs
apps/cli/src/actions/try_spend/: mod.rs
circuits/: Nargo.toml
circuits/crates/acceptor_circuit/: Nargo.toml  Prover.toml
circuits/crates/acceptor_circuit/src/: main.nr
circuits/crates/challenger_circuit/: Nargo.toml
circuits/crates/challenger_circuit/src/: main.nr
circuits/crates/common/: Nargo.toml
circuits/crates/common/src/: lib.nr
circuits/crates/common/src/bignum/: bignum.nr
circuits/crates/common/src/bignum/fields/: mod.nr
circuits/crates/common/src/bignum/fns/: serialization.nr
circuits/crates/common/src/secp256k1/: curve_jac.nr  curve_params.nr  mod.nr  scalar_field.nr
circuits/crates/common/src/secp256k1/utils/: derive_offset_generators.nr  hash_to_curve.nr
circuits/crates/common/src/utils/: mod.nr
circuits/crates/discrete_log_circuit/: Nargo.toml
circuits/crates/discrete_log_circuit/src/: main.nr
circuits/crates/signature_circuit/: Nargo.toml
circuits/crates/signature_circuit/src/: main.nr
circuits/op_rand/: Nargo.toml  README.md
circuits/op_rand/src/: main.nr
circuits/op_rand/src/secp256k1/: mod.nr
crates/op-rand/: Cargo.toml
crates/op-rand/src/transactions/: building.rs  creating.rs  errors.rs  mod.rs  pubkey_scripts.rs  signing.rs
crates/prover/: Cargo.toml
crates/prover/src/: commitment.rs  errors.rs  lib.rs
crates/prover/src/backends/: barretenberg.rs  mod.rs
crates/prover/src/bytecode/: mod.rs
crates/prover/src/traits/: mod.rs  prover.rs
crates/transaction-builder/: Cargo.toml
crates/transaction-builder/src/: errors.rs  lib.rs  scripts.rs  transaction_builder.rs
crates/transaction-builder/src/transactions/: mod.rs  signing.rs
crates/types/: Cargo.toml
crates/types/src/: commitment.rs  lib.rs
