[package]
name = "op-rand-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
op-rand-prover = { workspace = true }
secp256k1 = { workspace = true, features = ["std"] }
rand = { workspace = true }
eyre = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = "0.22.1"
uuid = { version = "1.11.0", features = ["v4"] }
config = { version = "0.15.11" }
clap = { version = "4.3.23", features = ["derive"] }
clap-verbosity = { version = "2.1.0" }
tracing-log = "0.2.0"
indicatif = { version = "0.17.8" }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "ansi",
    "tracing-log",
] }
tokio = { version = "1.45.1", features = ["full"] }
color-eyre = { version = "0.6.2" }
reqwest = { version = "0.12", features = ["json"] }
