[package]
name = "op-rand-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
secp256k1 = { workspace = true, features = ["hashes", "rand"] }
noir_rs = { workspace = true, features = ["barretenberg"] }
lazy_static = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
